--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "a note taking app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "codyeddie",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.18.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/codyeddie/note-taker-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/codyeddie/note-taker-app/issues"
+  },
+  "homepage": "https://github.com/codyeddie/note-taker-app#readme"
 }
